--- a/MainPage.html
+++ b/MainPage.html
@@ -6,19 +6,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="quelle.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.6.3/css/font-awesome.min.css" />
-    <title>Jugendhaus Bad Imnau</title>
+    <title>Jugendhaus Bad Imnau Contact</title>
 </head>
 <body>
     <nav class="w3-bar w3-black">
         <a href="index.html" class="w3-button w3-bar-item">Home</a>
         <a href="News.html" class="w3-button w3-bar-item">News</a>
-        <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+        <a href="contact.html" class="w3-button w3-bar-item">Contact</a>
     </nav>
 
     <section>
-        <img class="mySlides" src="juha_oben.jpg" style="width:100%">
-        <img class="mySlides" src="juha_umzug.jpg" style="width:100%">
-        <img class="mySlides" src="juha_oktoberfest.jpg" style="width:100%">
+        <img class="mySlides" src="pics\1.jpg" style="width:100%">
+        <img class="mySlides" src="pics\2.jpg" style="width:100%">
+        <img class="mySlides" src="pics\3.jpg" style="width:100%">
     </section>
 
     <section class="w3-container w3-center w3-content" style="max-width:600px">
@@ -70,7 +70,7 @@
         <!--HIER NOCH INSTAGEMRAMM-->
 
         <p class="w3-medium">
-            Jugendhaus  <a href="MainPage.html" target="_blank">Jugendhaus Bad Imnau</a>
+              <a href="MainPage.html" target="_blank">Jugendhaus Bad Imnau</a>
         </p>
     </footer>
 
