--- a/News.html
+++ b/News.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="w3-bar w3-black">
-        <a href="MainPage.html" class="w3-button w3-bar-item">Home</a>
+        <a href="index.html" class="w3-button w3-bar-item">Home</a>
         <a href="News.html" class="w3-button w3-bar-item">News</a>
         <a href="#contact" class="w3-button w3-bar-item">Contact</a>
     </nav>
@@ -27,13 +27,13 @@
 
         <article class="w3-third">
             <p class="w3-black">Instagram</p>
-            <a href="https://www.instagram.com/jugendhaus_bad_imnau/"><img src="insta.png" style="width:100%"></a>
+            <a href="https://www.instagram.com/jugendhaus_bad_imnau/"><img src="insta.jpg" style="width:100%"></a>
             <p>Hier uner Aktuellster Post!</p>
         </article>
 
         <article class="w3-third">
             <p class="w3-black">Facebook</p>
-            <a href="https://de-de.facebook.com/JugendhausBadImnauEv/"><img src="fb.png" style="width:100%"></a>
+            <a href="https://de-de.facebook.com/JugendhausBadImnauEv/"><img src="fb.jpg" style="width:100%"></a>
             <p>Unser neuster Facebook Post!</p>
         </article>
 
