--- a/News.html
+++ b/News.html
@@ -12,7 +12,7 @@
     <nav class="w3-bar w3-black">
         <a href="index.html" class="w3-button w3-bar-item">Home</a>
         <a href="News.html" class="w3-button w3-bar-item">News</a>
-        <a href="#contact" class="w3-button w3-bar-item">Contact</a>
+        <a href="contact.html" class="w3-button w3-bar-item">Contact</a>
     </nav>
 
 
